--- a/Snippets/Java JUnit test class def.plist
+++ b/Snippets/Java JUnit test class def.plist
@@ -29,6 +29,8 @@ public class ${2:`echo $TM_FILEPATH |  sed 's/\//./g' | sed 's/^.//' | sed 's/.*
 }</string>
 	<key>name</key>
 	<string>JUnit test class def</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jtest</string>
 	<key>uuid</key>
