--- a/Snippets/Java const def.plist
+++ b/Snippets/Java const def.plist
@@ -6,6 +6,8 @@
 	<string>private static final ${1:String} $2 = "$0";</string>
 	<key>name</key>
 	<string>const def</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jps</string>
 	<key>uuid</key>
