--- a/Snippets/Java if statement.plist
+++ b/Snippets/Java if statement.plist
@@ -8,6 +8,8 @@
 }</string>
 	<key>name</key>
 	<string>if statement</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jif</string>
 	<key>uuid</key>
