--- a/Snippets/Java logger.plist
+++ b/Snippets/Java logger.plist
@@ -8,6 +8,8 @@ protected final Log log = LogFactory.getLog(getClass());
 </string>
 	<key>name</key>
 	<string>logger</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jlog</string>
 	<key>uuid</key>
