--- a/Snippets/Java private method.plist
+++ b/Snippets/Java private method.plist
@@ -16,6 +16,8 @@ private ${1:void} $2(${3:String} $4) {
 }</string>
 	<key>name</key>
 	<string>private method</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jpm</string>
 	<key>uuid</key>
