--- a/Snippets/Java try:catch:finally.plist
+++ b/Snippets/Java try:catch:finally.plist
@@ -12,6 +12,8 @@
 }</string>
 	<key>name</key>
 	<string>try/catch/finally</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jtc</string>
 	<key>uuid</key>
