--- a/Snippets/bean setter and getter.plist
+++ b/Snippets/bean setter and getter.plist
@@ -27,6 +27,8 @@ public ${2:String} get${1:FieldName}() {
 	<string>@B</string>
 	<key>name</key>
 	<string>setter and getter</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>bean</string>
 	<key>uuid</key>
