--- a/Snippets/method.plist
+++ b/Snippets/method.plist
@@ -16,6 +16,8 @@ public ${2:RETURN} ${1:METHOD}() {
 	<string></string>
 	<key>name</key>
 	<string>method</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>meth</string>
 	<key>uuid</key>
