--- a/Commands/Find j-class declar.plist
+++ b/Commands/Find j-class declar.plist
@@ -20,8 +20,8 @@
 	<string>Find j-class declar</string>
 	<key>output</key>
 	<string>separateWindow</string>
-	<key>restrainToMode</key>
-	<true/>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>uuid</key>
 	<string>DA0A565B-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
