--- a/Commands/Find j-method declar.plist
+++ b/Commands/Find j-method declar.plist
@@ -22,8 +22,8 @@
 	<string>Find j-method declar</string>
 	<key>output</key>
 	<string>separateWindow</string>
-	<key>restrainToMode</key>
-	<true/>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>uuid</key>
 	<string>DA0A57A9-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
