--- a/Snippets/JSTL c:out.plist
+++ b/Snippets/JSTL c:out.plist
@@ -6,6 +6,8 @@
 	<string>&lt;c:out value="\${$1}"/&gt;$0</string>
 	<key>name</key>
 	<string>c:out</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jcout</string>
 	<key>uuid</key>
