--- a/Snippets/Java if:else statement.plist
+++ b/Snippets/Java if:else statement.plist
@@ -16,6 +16,8 @@
 </string>
 	<key>name</key>
 	<string>if/else statement</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jelse</string>
 	<key>uuid</key>
