--- a/Snippets/Java private var.plist
+++ b/Snippets/Java private var.plist
@@ -8,6 +8,8 @@
 $0</string>
 	<key>name</key>
 	<string>private var</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jpv</string>
 	<key>uuid</key>
