--- a/Snippets/Java public method.plist
+++ b/Snippets/Java public method.plist
@@ -18,6 +18,8 @@ public ${1:void} $2(${3:String} $4) {
 </string>
 	<key>name</key>
 	<string>public method</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jpum</string>
 	<key>uuid</key>
