--- a/Snippets/Java while statement.plist
+++ b/Snippets/Java while statement.plist
@@ -10,6 +10,8 @@
 }</string>
 	<key>name</key>
 	<string>while statement</string>
+	<key>scope</key>
+	<string>source.java</string>
 	<key>tabTrigger</key>
 	<string>jwh</string>
 	<key>uuid</key>
