--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -85,7 +85,7 @@
 
         /* keywords.data-types.java */
         {
-            match = "\\<(byte|short|char|int|long|float|double|boolean|[A-Z][A-Za-z0-9]+)\\>";
+            match = "\\b(byte|short|char|int|long|float|double|boolean|[A-Z][A-Za-z0-9]+)\\b";
             captures = {
                 1 = { name = "keyword.storage.data-types.java"; };
             };
@@ -95,7 +95,7 @@
          * @todo fix conflict with keywords.modifiers.java
          */
         {
-            match = "\\<(private|protected|public)\\>";
+            match = "\\b(private|protected|public)\\b";
             captures = {
                 1 = { name = "keyword.storage.access-control.java"; };
             };
@@ -103,7 +103,7 @@
         
         /* keywords.modifiers.java */
         {
-            match = "\\<(abstract|final|native|private|protected|public|static|transient|synchronized|volatile|strictfp)\\>";
+            match = "\\b(abstract|final|native|private|protected|public|static|transient|synchronized|volatile|strictfp)\\b";
             captures = {
                 1 = {
                     name = "keyword.storage.modifiers.java";
@@ -113,7 +113,7 @@
         
         /* keywords.catch-exception.java */
         {
-            match = "\\<(try|catch|finally|throw)\\>";
+            match = "\\b(try|catch|finally|throw)\\b";
             captures = {
                 1 = {
                     name = "keyword.control.catch-exception.java";
@@ -123,7 +123,7 @@
         
         /* keywords.control.java */
         {
-            match = "\\<(break|case|continue|default|do|while|for|switch|if|else)\\>";
+            match = "\\b(break|case|continue|default|do|while|for|switch|if|else)\\b";
             captures = {
                 1 = {
                     name = "keyword.control.java";
@@ -133,7 +133,7 @@
         
         /* keywords.class-fns.java */
         {
-            match = "\\<(class|extends|implements|import|instanceof|new|package|return|interface|this|throws|void|super)\\>";
+            match = "\\b(class|extends|implements|import|instanceof|new|package|return|interface|this|throws|void|super)\\b";
             captures = {
                 1 = {
                     name = "keyword.class-fns.java";
@@ -143,7 +143,7 @@
 
         /* keywords.assigned-values.java */
         {
-            match = "\\<(true|false|null)\\>";
+            match = "\\b(true|false|null)\\b";
             captures = {
                 1 = {
                     name = "keyword.storage.assigned-values.java";
@@ -153,7 +153,7 @@
     
         /* constants.numeric.java */
         {
-            match = "\\<((0(x|X)[0-9a-fA-F]*)|(([0-9]+\\.?[0-9]*)|(\\.[0-9]+))((e|E)(\\+|-)?[0-9]+)?)([LlFfUuDd]|UL|ul|)?\\>";
+            match = "\\b((0(x|X)[0-9a-fA-F]*)|(([0-9]+\\.?[0-9]*)|(\\.[0-9]+))((e|E)(\\+|-)?[0-9]+)?)([LlFfUuDd]|UL|ul|)?\\b";
             captures = {
                 1 = {
                     name = "constant.numeric.java";
