Changed all line comments to be named (if it made sense) like this:  comment.line.double-slash  comment.line.double-dash  comment.line.number-sign  comment.line.percentage
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@995 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -79,7 +79,7 @@
         
         /* comments.line.java */
         {
-            name = "comment.line.java";
+            name = "comment.line.double-slash.java";
             match = "//.*$";
         },
 
