--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -153,7 +153,7 @@
     
         /* constants.numeric.java */
         {
-            match = "\\b((0(x|X)[0-9a-fA-F]*)|(([0-9]+\\.?[0-9]*)|(\\.[0-9]+))((e|E)(\\+|-)?[0-9]+)?)([LlFfUuDd]|UL|ul|)?\\b";
+            match = "\\b((0(x|X)[0-9a-fA-F]*)|(([0-9]+\\.?[0-9]*)|(\\.[0-9]+))((e|E)(\\+|-)?[0-9]+)?)([LlFfUuDd]|UL|ul)?\\b";
             captures = {
                 1 = {
                     name = "constant.numeric.java";
