--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -18,22 +18,6 @@
     foldingStartMarker = "\\{\\s*$";
     foldingStopMarker = "^\\s*\\}";
 
-    increaseIndentPattern = "^.*(\\{[^}\"']*|\\([^)\"']*)$";
-
-    smartTypingPairs = (
-        ( "(", ")" ),
-        ( "[", "]" ),
-        ( "{", "}" ),
-        ( "\"", "\"" ), 
-        ( "'", "'" )
-    );
-    
-    highlightPairs = (
-        ( "(", ")" ),
-        ( "[", "]" ),
-        ( "{", "}" )
-    );
-    
     patterns = (
 
         /* comments.block.java */
@@ -86,9 +70,7 @@
         /* keywords.data-types.java */
         {
             match = "\\b(byte|short|char|int|long|float|double|boolean|[A-Z][A-Za-z0-9]+)\\b";
-            captures = {
-                1 = { name = "keyword.storage.data-types.java"; };
-            };
+            name = "keyword.storage.data-types.java";
         },
 
         /* keywords.access-control.java 
@@ -96,69 +78,43 @@
          */
         {
             match = "\\b(private|protected|public)\\b";
-            captures = {
-                1 = { name = "keyword.storage.access-control.java"; };
-            };
+            name = "keyword.storage.access-control.java";
         },
         
         /* keywords.modifiers.java */
         {
             match = "\\b(abstract|final|native|private|protected|public|static|transient|synchronized|volatile|strictfp)\\b";
-            captures = {
-                1 = {
-                    name = "keyword.storage.modifiers.java";
-                };
-            };
+            name = "keyword.storage.modifiers.java";
         },
         
         /* keywords.catch-exception.java */
         {
             match = "\\b(try|catch|finally|throw)\\b";
-            captures = {
-                1 = {
-                    name = "keyword.control.catch-exception.java";
-                };
-            };
+            name = "keyword.control.catch-exception.java";
         },
         
         /* keywords.control.java */
         {
             match = "\\b(break|case|continue|default|do|while|for|switch|if|else)\\b";
-            captures = {
-                1 = {
-                    name = "keyword.control.java";
-                };
-            };
+            name = "keyword.control.java";
         },
         
         /* keywords.class-fns.java */
         {
             match = "\\b(class|extends|implements|import|instanceof|new|package|return|interface|this|throws|void|super)\\b";
-            captures = {
-                1 = {
-                    name = "keyword.class-fns.java";
-                };
-            };
+            name = "keyword.class-fns.java";
         },
 
         /* keywords.assigned-values.java */
         {
             match = "\\b(true|false|null)\\b";
-            captures = {
-                1 = {
-                    name = "keyword.storage.assigned-values.java";
-                };
-            };
+            name = "keyword.storage.assigned-values.java";
         },
     
         /* constants.numeric.java */
         {
             match = "\\b((0(x|X)[0-9a-fA-F]*)|(([0-9]+\\.?[0-9]*)|(\\.[0-9]+))((e|E)(\\+|-)?[0-9]+)?)([LlFfUuDd]|UL|ul)?\\b";
-            captures = {
-                1 = {
-                    name = "constant.numeric.java";
-                };
-            };
+            name = "constant.numeric.java";
         },
         
         /* strings.double-quoted.java */
@@ -176,5 +132,26 @@
             end = "'";
             swallow = "\\\\.";
         },
+        
+        // /* match methods */
+        // {
+        //     // match = "(?s:([A-Za-z0-9]+)\\s*\\(((byte|short|char|int|long|float|double|boolean|[A-Z][A-Za-z0-9]+?)\\s*([a-z][A-Za-z0-9]+?)(,\\s*)??)*?\\)\\s*[^{]+?)";
+        //     //           [------------]       [------------------------------------------------------------------------------------------------]
+        //     //                                 [-----argument type--------------------------------------------------[-----arg name----][-----]
+        // 
+        //     match = "String (getFoo)\\(((Baz) (baz)(,\\s+)?)*\\)";
+        // 
+        //     captures = {
+        //         1 = {
+        //             name = "function-name.x";
+        //         };
+        //         3 = {
+        //             name = "keyword.data-types.java.x";
+        //         };
+        //         4 = {
+        //             name = "function-argument.x";
+        //         };
+        //     };
+        // },
     );
 }
