--- a/Syntaxes/JavaProperties.plist
+++ b/Syntaxes/JavaProperties.plist
@@ -22,7 +22,7 @@
         {
             match = "^([^:=]+)[:=](.*)$";
             captures = {
-                1 = { name = "keyword.java-props"; };
+                1 = { name = "keyword.other.java-props"; };
             };
         },
     );
