• removed shift-cmd-B as key equivalent, since this is used for Select Block
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@1408 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/bean setter and getter.plist
+++ b/Snippets/bean setter and getter.plist
@@ -24,7 +24,7 @@ public ${2:String} get${1:FieldName}() {
 // }}}    
 </string>
 	<key>keyEquivalent</key>
-	<string>@B</string>
+	<string></string>
 	<key>name</key>
 	<string>setter and getter</string>
 	<key>scope</key>
