• changed this|super from variable.other to variable,language
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@1541 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -81,7 +81,7 @@
         {   name = "constant.language.java";
             match = "\\b(true|false|null)\\b";
         },
-        {   name = "variable.other.java";
+        {   name = "variable.language.java";
             match = "\\b(this|super)\\b";
         },
         {   name = "constant.numeric.java";
