• give ant a scope of source.java, text.xml (does other need it?) • title case compile & run
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@1996 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Compile & run java file.plist
+++ b/Commands/Compile & run java file.plist
@@ -24,7 +24,7 @@ java "${TM_FILENAME%.java}"
 	<key>keyEquivalent</key>
 	<string>@b</string>
 	<key>name</key>
-	<string>Compile &amp; run java file</string>
+	<string>Compile &amp; Run Single File</string>
 	<key>output</key>
 	<string>showAsHTML</string>
 	<key>scope</key>
