--- a/Commands/ant.plist
+++ b/Commands/ant.plist
@@ -23,9 +23,11 @@ ant -s build.xml 2&gt;&amp;1 | "$TM_BUNDLE_PATH/Commands/htmlize_ant.py"
 	<key>lineCaptureRegister</key>
 	<string>2</string>
 	<key>name</key>
-	<string>ant</string>
+	<string>Ant</string>
 	<key>output</key>
 	<string>showAsHTML</string>
+	<key>scope</key>
+	<string>source.java, text.xml</string>
 	<key>uuid</key>
 	<string>DA0A5984-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
