--- a/info.plist
+++ b/info.plist
@@ -13,6 +13,7 @@
 		<string>DA0A57A9-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>DA0A565B-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>DA0A58E2-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
 		<string>BC8B8F52-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>BC8B9272-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>BC8B8FE3-5F16-11D9-B9C3-000D93589AF6</string>
