moved Soryu's modified Java syntax to a new file, so that we can work on merging the two while I still use the original.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@2105 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Soryu Java.plist
+++ b/Syntaxes/Soryu Java.plist
@@ -10,7 +10,7 @@
     	Soryu
 	
     	Comments:
-    	• I excluded overridden anonymous Constructors from "declaration.function.method.java", so they won't show up in the Goto Symbol popup to reduce clutter a little.
+    	Ã¢ÂÂ¢ I excluded overridden anonymous Constructors from "declaration.function.method.java", so they won't show up in the Goto Symbol popup to reduce clutter a little.
 	</string>
 	<key>fileTypes</key>
 	<array>
@@ -22,7 +22,7 @@
 	<key>foldingStopMarker</key>
 	<string>^\s*\*\*/|^\s*\}</string>
 	<key>name</key>
-	<string>Java</string>
+	<string>Java (Soryu)</string>
 	<key>patterns</key>
 	<array>
 		<dict>
@@ -278,8 +278,8 @@
 		</dict>
 	</dict>
 	<key>scopeName</key>
-	<string>source.java</string>
+	<string>source.java_soryu</string>
 	<key>uuid</key>
-	<string>2B449DF6-6B1D-11D9-94EC-000D93589AF6</string>
+	<string>3610571B-A4DA-4A07-A782-C905E9FDA779</string>
 </dict>
 </plist>
