--- a/Syntaxes/Soryu Java.plist
+++ b/Syntaxes/Soryu Java.plist
@@ -10,7 +10,7 @@
     	Soryu
 	
     	Comments:
-    	Ã¢ÂÂ¢ I excluded overridden anonymous Constructors from "declaration.function.method.java", so they won't show up in the Goto Symbol popup to reduce clutter a little.
+    	• I excluded overridden anonymous Constructors from "declaration.function.method.java", so they won't show up in the Goto Symbol popup to reduce clutter a little.
 	</string>
 	<key>fileTypes</key>
 	<array>
