fixed overly-greedy constructor pattern.  Will no longer match forever on something like     super(foo);
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@2109 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -154,6 +154,7 @@
 			<string>(?x)^\s*
 					(\b(public|private|protected|static|final|native|synchronized|abstract|threadsafe|transient)\b)*\s* # modifier
 					(\w+)\s* # identifier
+					(?!.*;)  # abort if line has a ;
 					(?=\()</string>
 			<key>captures</key>
 			<dict>
