• Added macro for wrapping a selection in an if block • Update bean snippet to require less typing on the part of the user • Various updates to the syntax for correctness.     -- now sets scope properly for classes     -- less greedy (but only slightly) scope for constructors     -- excessively-modified methods, classes and constructors now have scope set properly for all modifiers Thanks to Eridius for the modifier regexp help.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@2110 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/bean setter and getter.plist
+++ b/Snippets/bean setter and getter.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>// {{{ set${1:FieldName}
+	<string>// {{{ set${1/./\u$0/}
 /**
- * Setter for ${3:fieldName}.
- * @param new${1:FieldName} new value for ${3:fieldName}
+ * Setter for ${1:fieldName}.
+ * @param new${1/./\u$0/} new value for ${1:fieldName}
  */
-public void set${1:FieldName}(${2:String} new${1:FieldName}) {
-    ${3:fieldName} = new${1:FieldName};
+public void set${1/./\u$0/}(${2:String} new${1/./\u$0/}) {
+    ${1:fieldName} = new${1/./\u$0/};
 }
 // }}}
 
-// {{{ get${1:FieldName}
+// {{{ get${1/./\u$0/}
 /**
- * Getter for ${3:fieldName}.
- * @return ${3:fieldName}
+ * Getter for ${1:fieldName}.
+ * @return ${1:fieldName}
  */
-public ${2:String} get${1:FieldName}() {
-    return ${3:fieldName};
+public ${2:String} get${1/./\u$0/}() {
+    return ${1:fieldName};
 }
 // }}}    
 </string>
