--- a/info.plist
+++ b/info.plist
@@ -14,6 +14,7 @@
 		<string>DA0A565B-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>DA0A58E2-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
+		<string>AE1CD496-74A0-42E9-94A7-82D260ABA831</string>
 		<string>BC8B8F52-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>BC8B9272-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>BC8B8FE3-5F16-11D9-B9C3-000D93589AF6</string>
@@ -29,8 +30,10 @@
 		<string>BC8B95CA-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>2A28E50A-6B1D-11D9-8689-000D93589AF6</string>
 		<string>2B449DF6-6B1D-11D9-94EC-000D93589AF6</string>
+		<string>3610571B-A4DA-4A07-A782-C905E9FDA779</string>
 		<string>2D3EF41B-6DFB-11D9-91EB-000D93589AF6</string>
 		<string>2D3EC03E-6DFB-11D9-91EB-000D93589AF6</string>
+		<string>FC40FDBA-EEB6-43FD-9D58-A1D0F116CEC1</string>
 	</array>
 	<key>uuid</key>
 	<string>4677FEB2-6227-11D9-BFB1-000D93589AF6</string>
